--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "85423228",
+   "id": "666e77db",
    "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/jbwenjoy/000545000/blob/jbw/CIS_545_Final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "192dab9c",
+   "id": "17a01cd0",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8300f63d",
+   "id": "52548ade",
    "metadata": {},
    "source": [
     "# **CIS 5450 Final Project - Spring 2025**\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d789615",
+   "id": "e9b4befc",
    "metadata": {},
    "source": [
     "# **1. Introduction and Background**"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c29db15",
+   "id": "51a90bf2",
    "metadata": {},
    "source": [
     "## **1.1 Problem Statement**\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37ec112",
+   "id": "af875cf2",
    "metadata": {},
    "source": [
     "## **1.2 Objective and Value Proposition**\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c72357",
+   "id": "0ac164f3",
    "metadata": {},
    "source": [
     "# **2. Data Loading and Preprocessing**\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbadb04",
+   "id": "1d0a7e48",
    "metadata": {},
    "source": [
     "## **2.1 📊 Overview of the Dataset**\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a51dc78",
+   "id": "b7aa7b4f",
    "metadata": {},
    "source": [
     "## **2.2 Data Loading**"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8ba7fd",
+   "id": "73a4ce5e",
    "metadata": {},
    "source": [
     "Import the relevant libraries for all stages of our report (pre-processing, exploratory data analysis, and model selection). These imports primarily span fundamental libraries such as `pandas`, `matplotlib`, `numpy`, and `sklearn`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7e8978",
+   "id": "d68eb7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a5e9777",
+   "id": "5999849d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5037b2",
+   "id": "ca53d558",
    "metadata": {},
    "source": [
     "❗ ONLY RUN ONE OF THE TWO CELLS BELOW, SEE COMMENTS"
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89699b81",
+   "id": "b3a7f63e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae9b0cf",
+   "id": "1581d2e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +255,14 @@
     "if not file_exists:\n",
     "    # Create the kaggle directory and\n",
     "    # (NOTE: Do NOT run this cell more than once unless restarting kernel)\n",
-    "    # # !mkdir ~/.kaggle\n",
+    "    # # # !mkdir ~/.kaggle\n",
     "\n",
     "    # Read the uploaded kaggle.json file\n",
-    "    # # !cp /content/drive/MyDrive/kaggle.json ~/.kaggle/\n",
+    "    # # # !cp /content/drive/MyDrive/kaggle.json ~/.kaggle/\n",
     "\n",
     "    # Download flights dataset (DO NOT CHANGE)\n",
-    "    # # !kaggle datasets download -d bhavikjikadara/us-airline-flight-routes-and-fares-1993-2024\n",
-    "    # # !unzip /content/us-airline-flight-routes-and-fares-1993-2024\n",
+    "    # # # !kaggle datasets download -d bhavikjikadara/us-airline-flight-routes-and-fares-1993-2024\n",
+    "    # # # !unzip /content/us-airline-flight-routes-and-fares-1993-2024\n",
     "\n",
     "    flights_data = 'US Airline Flight Routes and Fares 1993-2024.csv'\n",
     "    flights_df = pd.read_csv(flights_data, low_memory=False)\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe80e85",
+   "id": "95842f4d",
    "metadata": {},
    "source": [
     "## **2.3 Data Prepossessing**\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd71774",
+   "id": "86d7edcb",
    "metadata": {},
    "source": [
     "### **2.3.1 Flight Data**"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b12ce4",
+   "id": "e7ae2077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38a5703",
+   "id": "d159a70e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d14346d",
+   "id": "ab0e6166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e876708",
+   "id": "2ce7a1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6c77c1",
+   "id": "b4ab549a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a3e820",
+   "id": "f153551c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aaf30ee",
+   "id": "d79c197d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b803637",
+   "id": "ca7a236e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b629716a",
+   "id": "3b7332a0",
    "metadata": {},
    "source": [
     "❗ BE CAREFUL: YOU CAN ONLY RUN BELOW ONCE WITHOUT RERUNNING THE CELL ABOVE!"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d6ea927",
+   "id": "a084a796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d3dbaf",
+   "id": "4dead954",
    "metadata": {},
    "source": [
     "### **2.3.2 Fuel Price Data**"
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cafa7f",
+   "id": "6eea67a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b9a561",
+   "id": "5134275d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0b8956",
+   "id": "069d7ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7eb768",
+   "id": "c42b8872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d02ae5e",
+   "id": "ddeece1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d15c5006",
+   "id": "afb34f6c",
    "metadata": {},
    "source": [
     "Since the fuel price data is very clean, we don't need further cleaning."
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89d9c0d",
+   "id": "2070258b",
    "metadata": {},
    "source": [
     "# **3. Exploratory Data Analysis (EDA)**\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ceb73b",
+   "id": "1c7cea32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17e1f95",
+   "id": "1e3a54b1",
    "metadata": {},
    "source": [
     "## **3.1 Distribution of Fare, distance and fuel price**"
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f3727b8",
+   "id": "74ced87b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719f85f4",
+   "id": "1de5db6b",
    "metadata": {},
    "source": [
     "We can see that:\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2c406a",
+   "id": "48050d10",
    "metadata": {},
    "source": [
     "## **3.2 US Flight Fare and Distance**"
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eebcb5d",
+   "id": "ac98bb67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd6fcef4",
+   "id": "e9e1200b",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f8972a4",
+   "id": "a60d8936",
    "metadata": {},
    "source": [
     "## **3.3 US Flight Fare and Fuel Price over Time**"
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f5c0619",
+   "id": "6af5f4cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee4ebfd",
+   "id": "539f5b12",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "427a103f",
+   "id": "0b14f05b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f7906fd",
+   "id": "507c8fb3",
    "metadata": {},
    "source": [
     "## **3.4 US Flight Fare and Passenger Count**"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9eec277",
+   "id": "7e980935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c786d6b7",
+   "id": "8dc9a83e",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f17c1e",
+   "id": "20b31b56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af16f2d",
+   "id": "a0ef6795",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c44e4b",
+   "id": "45dc749a",
    "metadata": {},
    "source": [
     "## **3.5 US Flight Fare and Carrier Type for Same Routes**"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1467552b",
+   "id": "7bb09b04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3946e323",
+   "id": "39bcb465",
    "metadata": {},
    "source": [
     "From this plot:\n",
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8761c821",
+   "id": "77025dc4",
    "metadata": {},
    "source": [
     "## **3.6 Top 10 Busiest Cities (Dept/Dest)**"
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aaf97bf",
+   "id": "91a7a0d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9af102ae",
+   "id": "7ddd9549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f36d854",
+   "id": "0c85a40e",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdeac9b0",
+   "id": "cdd20858",
    "metadata": {},
    "source": [
     "## **3.7 Correlation Analysis**"
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76d824b",
+   "id": "6ed4e5a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69df04f",
+   "id": "c5dadd80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de579c4a",
+   "id": "d3d2ac18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,13 +1076,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38608c96",
+   "id": "95f7f0d6",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "193d9494",
+   "id": "1d8728fb",
    "metadata": {},
    "source": [
     "From the correlation analysis above, we can see that airfare does have some correlation with existing numerical features. Higher fuel price, longer distance, and less passengers tend to lead to higher fare price. Large carriers tend to dominate the market and affect the airfare the most, low-fare carriers can have less market share and more flexible pricing policy and thus lead to a weaker correlation."
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac4511a5",
+   "id": "c9e46d72",
    "metadata": {},
    "source": [
     "# **4. Feature Engineering**\n",
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68fb827f",
+   "id": "ad77c9a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b87ea9",
+   "id": "bb52f831",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093b52c1",
+   "id": "334234be",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2abb6ca6",
+   "id": "903b4597",
    "metadata": {},
    "source": [
     "### Feature Engineering Summary\n",
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1c5333",
+   "id": "5c10994c",
    "metadata": {},
    "source": [
     "# **5. Modeling**"
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaeca889",
+   "id": "38b5321a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5aa3242",
+   "id": "2ab90e9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7395eb0b",
+   "id": "4a7eeb08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22418b5e",
+   "id": "8ed72e4e",
    "metadata": {},
    "source": [
     "As we can see, the baseline linear regression model has a very low R-squared value. This means that the model is not a good fit for the data.\n",
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "273152e4",
+   "id": "8ed98b8f",
    "metadata": {},
    "source": [
     "# **6. Project Management**\n",
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80b02058",
+   "id": "aaa85433",
    "metadata": {},
    "source": [
     "# **7. Hypothesis Testing**\n",
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e97e36b9",
+   "id": "76fd5cbf",
    "metadata": {},
    "source": [
     "# **8. Difficulty & Challenge**\n",
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9be9af",
+   "id": "787d2d51",
    "metadata": {
     "lines_to_next_cell": 3
    },
