--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -1976,7 +1976,7 @@
     "- **Deep Learning Approaches:** Implement time-series neural networks (e.g., LSTMs) for sequence-based fare prediction.\n",
     "- **Route Clustering:** Use unsupervised methods to group similar routes for more targeted pricing analysis.\n",
     "- **Real-Time Data:** Incorporate up-to-date APIs or live pricing feeds to extend this framework to a real-time fare monitoring tool.\n",
-    "- **Route Clustering:** Use unsupervised methods to group similar routes for more targeted pricing analysis."
+    "- **Causal Inference:** Apply advanced techniques to distinguish correlation from causation in variables like fuel price and competition level."
    ]
   },
   {
@@ -1993,6 +1993,9 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
